:lipstick: Fix Z-index :lipstick:

--- a/source/css/_plugins/inside-md.less
+++ b/source/css/_plugins/inside-md.less
@@ -358,6 +358,8 @@ ol > li > ol > li > ol > li {
 #write ol > li, #write ul > li {
   //color: #db4d52;
   list-style: disc;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
 }
 
 #write ol > li > *, #write ul > li > * {
