--- a/source/css/_plugins/moon-menu.less
+++ b/source/css/_plugins/moon-menu.less
@@ -165,7 +165,7 @@
   user-select: none;
   padding: 58px 0 1rem;
   width: 252px;
-  z-index: 1;
+  z-index: 150;
   transition-duration: 378ms;
   transform: translate3d(252px,0,0);
 }
