--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2068,6 +2068,8 @@ ol > li > ol > li > ol > li {
 #write ol > li,
 #write ul > li {
   list-style: disc;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 #write ol > li > *,
 #write ul > li > * {
@@ -2649,7 +2651,7 @@ a.is-active-link {
   user-select: none;
   padding: 58px 0 1rem;
   width: 252px;
-  z-index: 1;
+  z-index: 150;
   transition-duration: 378ms;
   transform: translate3d(252px, 0, 0);
 }
